--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Teaser</title>
+  <title>About Our Apartment</title>
 
 
   <!-- bootstrap core css -->
@@ -24,6 +24,9 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+<!--  favicon icon starts-->
+  <link rel="shortcut icon" href="images/z-letter.jpg" type="image/x-icon">
+<!--  favicon icon ends-->
 </head>
 
 <body class="sub_page">
@@ -33,7 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+<!--            <img src="images/logo.png" alt="" />-->
           </a>
           <div class="navbar-collapse" id="">
             <ul class="navbar-nav justify-content-between ">
@@ -67,7 +70,7 @@
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="house.html">HOUSE</a>
-                <a href="price.html">PRICING</a>
+                <a href="categories.html">CATEGORIES</a>
                 <a href="contact.html">CONTACT US</a>
               </div>
             </div>
@@ -89,7 +92,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+            <img src="images/apart-outside%20view.jpg" alt="">
           </div>
         </div>
         <div class="col-md-6">
@@ -100,9 +103,10 @@
               </h2>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in
-              some form, by injected humour, or randomised words
+              Where comfort meets contemporary living in the heart of Kilimani, Nairobi. Our elegantly designed residences
+                offer spacious interiors, modern finishes, and a tranquil ambiance, creating the perfect home for urban dwellers.
+                With top-tier amenities and a prime location close to shopping, dining, and business hubs, Zuri Nest is your gateway
+                to stylish and convenient city living.
             </p>
             <a href="">
               Read More
@@ -138,7 +142,7 @@
                 <img src="images/phone.png" width="12px" alt="">
               </div>
               <p>
-                +01 1234567890
+                +254 7518 765
               </p>
             </div>
             <div>
@@ -146,7 +150,7 @@
                 <img src="images/mail.png" width="18px" alt="">
               </div>
               <p>
-                demo@gmail.com
+                zuri.nest@gmail.com
               </p>
             </div>
           </div>
@@ -154,10 +158,10 @@
         <div class="col-md-3">
           <div class="info_info">
             <h5>
-              Information
+               Join Us
             </h5>
             <p>
-              ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              Join our happy residents and experience the comfort, luxury, and convenience that Zuri Nest has to offer!
             </p>
           </div>
         </div>
@@ -165,39 +169,39 @@
         <div class="col-md-3">
           <div class="info_links">
             <h5>
-              Useful Link
+              Get in Touch
             </h5>
             <ul>
               <li>
                 <a href="">
-                  There are many
+                  We're here to help you with any questions or concerns you may have!
                 </a>
               </li>
               <li>
                 <a href="">
-                  variations of
+                  Whether you're looking for more
                 </a>
               </li>
               <li>
                 <a href="">
-                  passages of
+                   information on available units, pricing,
                 </a>
               </li>
               <li>
                 <a href="">
-                  Lorem Ipsum
+                  amenities, or would like to schedule a tour,
                 </a>
               </li>
               <li>
                 <a href="">
-                  available, but
+                  our team is ready to assist you.
                 </a>
               </li>
-              <li>
-                <a href="">
-                  the i
-                </a>
-              </li>
+<!--              <li>-->
+<!--                <a href="">-->
+<!--                  the i-->
+<!--                </a>-->
+<!--              </li>-->
             </ul>
           </div>
         </div>
@@ -240,7 +244,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Zuri Nest Kilimani</a>
       </p>
     </div>
   </section>
