--- a/categories.html
+++ b/categories.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Teaser</title>
+  <title>Apartment Categories</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -23,6 +23,9 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+<!--  start of favicon icon-->
+  <link rel="shortcut icon" href="images/z-letter.jpg" type="image/x-icon">
+<!--  end of favicon icon-->
 </head>
 
 <body class="sub_page">
@@ -32,7 +35,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+<!--            <img src="images/logo.png" alt="" />-->
           </a>
           <div class="navbar-collapse" id="">
             <ul class="navbar-nav justify-content-between ">
@@ -66,7 +69,7 @@
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="house.html">HOUSE</a>
-                <a href="price.html">PRICING</a>
+                <a href="categories.html">CATEGORIES</a>
                 <a href="contact.html">CONTACT US</a>
               </div>
             </div>
@@ -84,10 +87,10 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Our Pricing
+          Apartment Categories
         </h2>
         <p>
-          There are many variations of passages of Lorem Ipsum available, but the
+          At Zuri Nest, we offer three distinct apartment options to suit different needs and budgets:
         </p>
       </div>
       <div class="price_container">
@@ -97,33 +100,33 @@
               <h4>
                 01
               </h4>
-              <h6>
-                Basic
+              h6>
+                Essential Apartments
               </h6>
             </div>
             <div class="text-box">
               <h2>
-                $1000.00
+                sh.3.5M
               </h2>
               <ul>
                 <li>
-                  variations of
+                  Affordable yet stylish,
                 </li>
                 <li>
-                  passages of Lorem
+                  featuring modern interiors
                 </li>
                 <li>
-                  Ipsum available,
+                  and essential amenities
                 </li>
                 <li>
-                  but the majority
+                 for comfortable living.
                 </li>
-                <li>
-                  have suffered
-                </li>
-                <li>
-                  alteration in
-                </li>
+<!--                <li>-->
+<!--                  have suffered-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                  alteration in-->
+<!--                </li>-->
               </ul>
             </div>
           </div>
@@ -140,32 +143,32 @@
                 02
               </h4>
               <h6>
-                Standard
+                Signature Apartments
               </h6>
             </div>
             <div class="text-box">
               <h2>
-                $2000.00
+                sh.8.5M
               </h2>
               <ul>
                 <li>
-                  variations of
+                  A perfect balance of
                 </li>
                 <li>
-                  passages of Lorem
+                  elegance and functionality,
                 </li>
                 <li>
-                  Ipsum available,
+                   with upgraded finishes
                 </li>
                 <li>
-                  but the majority
+                  and enhanced features.
                 </li>
-                <li>
-                  have suffered
-                </li>
-                <li>
-                  alteration in
-                </li>
+<!--                <li>-->
+<!--                  have suffered-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                  alteration in-->
+<!--                </li>-->
               </ul>
             </div>
           </div>
@@ -182,32 +185,32 @@
                 03
               </h4>
               <h6>
-                Premium
+                Elite Apartments
               </h6>
             </div>
             <div class="text-box">
               <h2>
-                $3000.00
+                sh.15.5M
               </h2>
               <ul>
                 <li>
-                  variations of
+                  The ultimate in luxury,
                 </li>
                 <li>
-                  passages of Lorem
+                  boasting high-end finishes,
                 </li>
                 <li>
-                  Ipsum available,
+                  spacious layouts, and exclusive amenities
                 </li>
                 <li>
-                  but the majority
+                  for a superior living experience.
                 </li>
-                <li>
-                  have suffered
-                </li>
-                <li>
-                  alteration in
-                </li>
+<!--                <li>-->
+<!--                  have suffered-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                  alteration in-->
+<!--                </li>-->
               </ul>
             </div>
           </div>
@@ -244,7 +247,7 @@
                 <img src="images/phone.png" width="12px" alt="">
               </div>
               <p>
-                +01 1234567890
+                +254 7518 765
               </p>
             </div>
             <div>
@@ -252,7 +255,7 @@
                 <img src="images/mail.png" width="18px" alt="">
               </div>
               <p>
-                demo@gmail.com
+                zuri.nest@gmail.com
               </p>
             </div>
           </div>
@@ -260,10 +263,10 @@
         <div class="col-md-3">
           <div class="info_info">
             <h5>
-              Information
+              Join Us
             </h5>
             <p>
-              ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              Join our happy residents and experience the comfort, luxury, and convenience that Zuri Nest has to offer!
             </p>
           </div>
         </div>
@@ -271,38 +274,40 @@
         <div class="col-md-3">
           <div class="info_links">
             <h5>
-              Useful Link
+              Get in Touch
             </h5>
             <ul>
               <li>
                 <a href="">
-                  There are many
+                  We're here to help you with any questions or concerns you may have!
+
+
                 </a>
               </li>
               <li>
                 <a href="">
-                  variations of
+                  Whether you're looking for more
                 </a>
               </li>
               <li>
                 <a href="">
-                  passages of
+                 information on available units, pricing,
                 </a>
               </li>
               <li>
                 <a href="">
-                  Lorem Ipsum
+                  amenities, or would like to schedule a tour,
                 </a>
               </li>
               <li>
                 <a href="">
-                  available, but
+                  our team is ready to assist you.
                 </a>
               </li>
               <li>
-                <a href="">
-                  the i
-                </a>
+<!--                <a href="">-->
+<!--                  the i-->
+<!--                </a>-->
               </li>
             </ul>
           </div>
@@ -346,7 +351,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Zuri Nest Kilimani</a>
       </p>
     </div>
   </section>
