--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Teaser</title>
+  <title>Contact Us</title>
 
 
   <!-- bootstrap core css -->
@@ -24,6 +24,9 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+<!--  favicon icon starts-->
+  <link rel="shortcut icon" href="images/z-letter.jpg" type="image/x-icon">
+<!--  favicon icon ends-->
 </head>
 
 <body class="sub_page">
@@ -33,7 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+<!--            <img src="images/logo.png" alt="" />-->
           </a>
           <div class="navbar-collapse" id="">
             <ul class="navbar-nav justify-content-between ">
@@ -67,7 +70,7 @@
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="house.html">HOUSE</a>
-                <a href="price.html">PRICING</a>
+                <a href="categories.html">CATEGORIES</a>
                 <a href="contact.html">CONTACT US</a>
               </div>
             </div>
@@ -94,7 +97,7 @@
         <div class="col-md-6 px-0">
           <div class="map_container">
             <div class="map-responsive">
-              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8121726659424!2d36.78736697574654!3d-1.2867703987009997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1182b28eba83%3A0xdc53f97e4527ff58!2sSomerset%20Westview%20Nairobi!5e0!3m2!1sen!2ske!4v1738236703891!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
@@ -152,7 +155,7 @@
                 <img src="images/phone.png" width="12px" alt="">
               </div>
               <p>
-                +01 1234567890
+                +254 7518 765
               </p>
             </div>
             <div>
@@ -160,7 +163,7 @@
                 <img src="images/mail.png" width="18px" alt="">
               </div>
               <p>
-                demo@gmail.com
+                zuri.nest@gmail.com
               </p>
             </div>
           </div>
@@ -168,10 +171,10 @@
         <div class="col-md-3">
           <div class="info_info">
             <h5>
-              Information
+              Join Us
             </h5>
             <p>
-              ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              Join our happy residents and experience the comfort, luxury, and convenience that Zuri Nest has to offer!
             </p>
           </div>
         </div>
@@ -179,38 +182,40 @@
         <div class="col-md-3">
           <div class="info_links">
             <h5>
-              Useful Link
+              Get in Touch
             </h5>
             <ul>
               <li>
                 <a href="">
-                  There are many
+                  We're here to help you with any questions or concerns you may have!
+
+
                 </a>
               </li>
               <li>
                 <a href="">
-                  variations of
+                  Whether you're looking for more
                 </a>
               </li>
               <li>
                 <a href="">
-                  passages of
+                 information on available units, pricing,
                 </a>
               </li>
               <li>
                 <a href="">
-                  Lorem Ipsum
+                  amenities, or would like to schedule a tour,
                 </a>
               </li>
               <li>
                 <a href="">
-                  available, but
+                  our team is ready to assist you.
                 </a>
               </li>
               <li>
-                <a href="">
-                  the i
-                </a>
+<!--                <a href="">-->
+<!--                  the i-->
+<!--                </a>-->
               </li>
             </ul>
           </div>
@@ -254,7 +259,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Zuri Nest Kilimani</a>
       </p>
     </div>
   </section>
