--- a/house.html
+++ b/house.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Teaser</title>
+  <title>Our Modern House Interiors</title>
 
 
   <!-- bootstrap core css -->
@@ -24,6 +24,9 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+<!--  favicon icon starts-->
+  <link rel="shortcut icon" href="images/z-letter.jpg" type="image/x-icon">
+<!--  favicon icon ends-->
 </head>
 
 <body class="sub_page">
@@ -33,7 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="" />
+<!--            <img src="images/logo.png" alt="" />-->
           </a>
           <div class="navbar-collapse" id="">
             <ul class="navbar-nav justify-content-between ">
@@ -67,7 +70,7 @@
                 <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="house.html">HOUSE</a>
-                <a href="price.html">PRICING</a>
+                <a href="categories.html">CATEGORIES</a>
                 <a href="contact.html">CONTACT US</a>
               </div>
             </div>
@@ -84,88 +87,112 @@
     <div class="container-fluid">
       <div class="heading_container">
         <h2>
-          House For Sale
+          Our Modern House Interiors
         </h2>
         <p>
-          There are many variations of passages of Lorem Ipsum available, but the
+          Featuring stylish, contemporary interiors with high-end finishes, our apartments are designed for comfort and sophistication.
+          <br>
+          Enjoy spacious living areas, ample natural light, and premium amenities, all within a serene and well-connected neighborhood.
+          <br>
+          Experience the perfect balance of luxury and tranquility at Zuri Nest.
         </p>
       </div>
       <div class="sale_container">
         <div class="box">
           <div class="img-box">
-            <img src="images/s-1.jpg" alt="">
+            <img src="images/modern-livingroom.jpg" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              apertments house
+              Modern Living Redefined
             </h6>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but
+              Step into a thoughtfully designed modern living room that exudes elegance and comfort. Featuring spacious open layouts,
+              floor-to-ceiling windows for natural light, and premium finishes, our living spaces offer the perfect blend of style and
+              functionality. Whether you're unwinding after a long day or entertaining guests, the sleek interiors, warm ambiance, and
+              contemporary décor make every moment at Zuri Nest truly special.
             </p>
           </div>
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-2.jpg" alt="">
+            <img src="images/kids-bedroom.jpg" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              apertments house
+              A Cozy Haven for Little Ones
             </h6>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but
+             Our kids' bedroom is designed with comfort, creativity, and functionality in mind. Featuring bright and airy spaces,
+              soft pastel tones, and ample storage, it provides a safe and inspiring environment for children to learn, play, and grow.
+              With modern finishes and thoughtful layouts, the room offers a perfect blend of fun and relaxation, making it a delightful space
+              for your little ones to call home.
             </p>
           </div>
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-3.jpg" alt="">
+            <img src="images/master-bedroom.jpg" alt="">
           </div>
           <div class="detail-box">
-            <h6>
-              apertments house
+            <<h6>
+              A Luxurious Master Retreat
             </h6>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but
+              The master bedroom at Zuri Nest is a sanctuary of comfort and sophistication. Designed with spacious layouts,
+              elegant finishes, and warm ambient lighting, it offers the perfect blend of style and relaxation. Featuring a
+              large wardrobe, en-suite bathroom, and expansive windows that bring in natural light, this space is crafted for
+              ultimate serenity. Whether unwinding after a long day or waking up to a peaceful morning, the master bedroom at
+              Zuri Nest is your private escape in the heart of the city
             </p>
           </div>
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-4.jpg" alt="">
+            <img src="images/kitchen.jpg" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              apertments house
+              A Modern Culinary Space
             </h6>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but
+              The kitchen at Zuri Nest is designed for both functionality and style, featuring sleek cabinetry, high-quality countertops,
+              and modern appliances that make cooking a delight. With an open-plan layout, ample storage, and elegant finishes, this
+              space is perfect for both everyday meals and entertaining guests. Whether you're a seasoned chef or just love a beautiful
+              kitchen, Zuri Nest offers a seamless blend of convenience and sophistication for a truly elevated culinary experience.
             </p>
           </div>
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-5.jpg" alt="">
+            <img src="images/laundry-space.jpg" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              apertments house
+              Smart & Efficient Laundry Space
             </h6>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but
+              Our laundry area is designed for convenience and efficiency, featuring well-ventilated spaces, modern fittings,
+              and ample storage to make laundry effortless. Equipped with dedicated washer and dryer provisions, the space
+              ensures a seamless laundry experience while maintaining the apartment’s sleek, organized look. At Zuri Nest,
+              even the smallest details are crafted to enhance your everyday living.
             </p>
           </div>
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-6.jpg" alt="">
+            <img src="images/bathroom.jpg" alt="">
           </div>
           <div class="detail-box">
-            <h6>
-              apertments house
+            h6>
+              Elegant & Contemporary Bathrooms
             </h6>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but
+              Our modern bathroom and toilet spaces are designed for both luxury and functionality. Featuring sleek fixtures,
+              high-quality tiles, glass shower enclosures, and elegant vanity units, these spaces offer a spa-like experience
+              in the comfort of your home. With well-lit mirrors, ample storage, and premium finishes, every detail is crafted
+              to enhance your daily routine with style and convenience. At Zuri Nest, your bathroom is more than just a space—it’s
+              a sanctuary of comfort and relaxation
             </p>
           </div>
         </div>
@@ -204,7 +231,7 @@
                 <img src="images/phone.png" width="12px" alt="">
               </div>
               <p>
-                +01 1234567890
+                +254 7518 765
               </p>
             </div>
             <div>
@@ -212,7 +239,7 @@
                 <img src="images/mail.png" width="18px" alt="">
               </div>
               <p>
-                demo@gmail.com
+                zuri.nest@gmail.com
               </p>
             </div>
           </div>
@@ -220,10 +247,10 @@
         <div class="col-md-3">
           <div class="info_info">
             <h5>
-              Information
+              Join Us
             </h5>
             <p>
-              ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              Join our happy residents and experience the comfort, luxury, and convenience that Zuri Nest has to offer!
             </p>
           </div>
         </div>
@@ -231,39 +258,39 @@
         <div class="col-md-3">
           <div class="info_links">
             <h5>
-              Useful Link
+              Get in Touch
             </h5>
             <ul>
               <li>
                 <a href="">
-                  There are many
+                  We're here to help you with any questions or concerns you may have!
                 </a>
               </li>
               <li>
                 <a href="">
-                  variations of
+                   Whether you're looking for more
                 </a>
               </li>
               <li>
                 <a href="">
-                  passages of
+                  information on available units, pricing,
                 </a>
               </li>
               <li>
                 <a href="">
-                  Lorem Ipsum
+                   amenities, or would like to schedule a tour,
                 </a>
               </li>
               <li>
                 <a href="">
-                  available, but
+                  our team is ready to assist you.
                 </a>
               </li>
-              <li>
-                <a href="">
-                  the i
-                </a>
-              </li>
+<!--              <li>-->
+<!--                <a href="">-->
+<!--                  the i-->
+<!--                </a>-->
+<!--              </li>-->
             </ul>
           </div>
         </div>
@@ -306,7 +333,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Zuri Nest Kilimani</a>
       </p>
     </div>
   </section>
