--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                 </span>
               </button>
             </div>
-<!--            <div id="myNav" class="overlay">-->
-<!--              <div class="overlay-content">-->
-<!--                <a href="index.html">HOME</a>-->
-<!--                <a href="about.html">ABOUT</a>-->
-<!--                <a href="house.html">HOUSE</a>-->
-<!--                <a href="price.html">PRICING</a>-->
-<!--                <a href="contact.html">CONTACT US</a>-->
-<!--              </div>-->
-<!--            </div>-->
+            <div id="myNav" class="overlay">
+              <div class="overlay-content">
+                <a href="index.html">HOME</a>
+                <a href="about.html">ABOUT</a>
+                <a href="house.html">HOUSE</a>
+                <a href="categories.html">CATEGORIES</a>
+                <a href="contact.html">CONTACT US</a>
+              </div>
+            </div>
           </div>
         </nav>
       </div>
@@ -728,6 +728,7 @@
             </h5>
             <p>
               Join our happy residents and experience the comfort, luxury, and convenience that Zuri Nest has to offer!
+            </p>
           </div>
         </div>
 
